--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@
   }
 }
 
+body{
+  @apply m-0 p-0;
+}
 
 .archivo{
   font-family: 'Archivo', sans-serif;
@@ -22,99 +25,57 @@
   font-family: 'Archivo Black', sans-serif;
 }
 
-/* Reset */
-
-body {
-  margin: 0;
+.charm-container {
+  position: relative;
+  width: 200px;
+  height: 35px;
+  overflow: hidden;
 }
 
-blockquote,
-pre,
-ol,
-ul,
-figure {
-  padding: 0;
-  margin: 0;
+.charm-item {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  background-color: #000;
+  color:#fff;
+  transform: translate3d(0, -100%, 0);
+  opacity: 0;
+  animation: swipe 16s ease-in-out infinite; /* Adjusted total animation duration */
+  will-change: transform, opacity;
 }
 
-img {
-  max-width: 100%;
-  display: block;
-  height: auto;
-  border: none;
+#subscribe {
+  animation-delay: -12s; /* Added new item with adjusted delay */
 }
 
-article,
-aside,
-figure,
-footer,
-header,
-aside,
-main,
-nav {
-  display: block;
+#date {
+  animation-delay: -8s; /* Adjusted animation delay */
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
+#time {
+  animation-delay: -4s; /* Adjusted animation delay */
 }
 
-/* Typography */
-
-body {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  color: #222;
-  background-color: #fafafa;
-  font: 400 14px/1.625 -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-    Segoe UI Symbol;
-  font-size: calc(14px + (20 - 14) * (100vw - 320px) / (750 - 320));
+#weather {
+  animation-delay: 0s; /* No delay needed as it is the first item */
 }
 
-@media (min-width: 750px) {
-  body {
-    font-size: 20px;
+
+@keyframes swipe {
+  0%, 100% {
+    transform: translate3d(0, -100%, 0);
+    opacity: 0;
+  }
+  6.25%, 25% { /* Adjusted for faster transition */
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+  31.25%, 50% { /* Adjusted for faster transition */
+    transform: translate3d(0, 100%, 0);
+    opacity: 0;
   }
 }
 
-a {
-  color: #2ab591;
-}
-
-code {
-  font-size: 0.9em;
-}
-
-/* Grid */
-
-.wrapper {
-  max-width: 800px;
-  padding: 20px;
-  margin: 0 auto;
-}
-
-/* Header */
-
-[role='banner'] {
-  background: #fff;
-}
-
-[role='banner'] a + a {
-  margin-left: 0.5em;
-}
-
-/* Footer */
-
-[role='contentinfo'] .wrapper {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-[role='contentinfo'] .deploy {
-  max-width: 40%;
-}
