--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,6 @@ body{
   font-family: 'GT America', sans-serif;
 }
 
-a {
-  span {
-    color: red;
-  }
-}
-
 .font-ultra-condensed{
   font-stretch: ultra-condensed;
 }
@@ -96,23 +90,6 @@ a {
 }
 
 
-blockquote{
-  @apply text-4xl my-8 font-black;
-}
-cite {
-  @apply not-italic text-base leading-tight font-normal mt-4 block;
-}
-
-blockquote.bright{
-  @apply bg-[#FF4019] text-white p-8;
-}
-blockquote.bright cite{
-  @apply text-black;
-}
-
-blockquote.sports{
-  @apply bg-black relative text-white p-8 text-6xl uppercase tracking-tight
-}
 blockquote.sports cite{
   @apply hidden;
 }
@@ -125,3 +102,13 @@ blockquote.sports:after{
   content:" ";
 }
 
+
+/* article body */
+
+.article-body{
+  @apply text-lg px-4 lg:px-0;
+
+  > * {
+    @apply mb-4
+  }
+}
