--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ body{
   clip-path: polygon(4px 0%, 100% 0%, calc(100% - 4px) 100%, 0% 100%);
 }
 
+.top-clip{
+  clip-path: polygon(4px 0%, calc(100% - 4px) 0, 100% 100%, 0% 100%);
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .scroller::-webkit-scrollbar {
     @apply hidden;
