--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 
 body{
-  @apply m-0 p-0;
+  @apply m-0 p-0 selection:bg-purple-100 selection:text-purple-800;
   font-family: 'GT America', sans-serif; 
 }
 
@@ -59,6 +59,10 @@ body{
   .border-white{
     @apply border-black;
   }
+}
+
+.text-orange{
+  @apply contrast-more:text-orange-800;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -175,8 +179,8 @@ body{
 .bg-gradient{
   background: linear-gradient(
     -45deg, 
-    theme('colors.gold'),
-    theme('colors.gold') 30%,
+    theme('colors.orange-400'),
+    theme('colors.orange-400') 30%,
     theme('colors.black') 30%,
     theme('colors.black') 60%,
     theme('colors.orange') 60%,
@@ -190,12 +194,12 @@ body{
     theme('colors.orange') 30%,
     theme('colors.black') 30%,
     theme('colors.black') 60%,
-    theme('colors.gold') 60%,
-    theme('colors.gold')
+    theme('colors.orange-400') 60%,
+    theme('colors.orange-400')
   )
   }
 
   /* documentation styles, only for this repo */
   .docs{
-    @apply bg-yellow mb-4 p-4;
+    @apply bg-orange-300 mb-4 p-4;
   }
