--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 
 body{
-  @apply m-0 p-0 ot-ss03 selection:bg-purple-100 selection:text-purple-800;
+  @apply m-0 p-0 ot-ss01 tabular-nums selection:bg-purple-100 selection:text-purple-800; 
   font-family: 'GT-America', sans-serif; 
 }
 
