--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,5 +136,5 @@ body{
 
   /* documentation styles, only for this repo */
   .docs{
-    @apply bg-orange-300 mb-4 p-4;
+    @apply bg-orange-100 mb-4 p-4 empty:hidden;
   }
