--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ body{
   font-family: 'GT-America', sans-serif;
 }
 
+.font-regular{
+  font-stretch: normal;
+}
+
 .font-ultra-condensed{
   font-stretch: ultra-condensed;
 }
