--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,3 +165,13 @@ body{
   .docs{
     @apply bg-orange-100 mb-4 p-4 empty:hidden;
   }
+
+
+  .block-social-embed iframe{
+    @apply rounded-2xl max-w-lg;
+  }
+
+
+
+
+
